apps/02-metrics/alertmanager/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: alertmanager-virtualservice
spec:
  hosts:
    - alertmanager.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: alertmanager-main.alertmanager.svc.cluster.local
            port:
              number: 9093
